Inclusão do 'shortcut icon' no head do index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <link rel="stylesheet" href="./style.css">
     
+        <link rel="shortcut icon" type="imagex/png" href="./Imagem/favicon.ico">
     </head>
 
     <body>
