--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         
                         <div class="coluna coluna-esquerda">
                             <figure>
-                                <img src="./Imagem/perfil.jpg" alt="Dionatam Lima">
+                                <img src="./Imagem/perfil.jpeg" alt="Dionatam Lima">
                                 <figcaption class="hidden">Dionatam Lima</figcaption>
                             </figure>
                         </div>
