--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="coluna coluna-esquerda">
                             <section>
                                 <h2>Perfil Pessoal</h2>
-                                <p>Tecnólogo em logística, e estudante de arte, procurando reinvenção no desenvolvimento web. Estudante WEB Fullstack na SoulCode Academy, com foco nas tecnologias: HTML, CSS, Javascript, Bootstrap, jQuery e Angular, no FrontEnd, e: NodeJs no BackEnd, além de Database com: SQL e No-SQL e Gestão, com as Metodologias Ágeis.
+                                <p>Tecnólogo em logística, e estudante de arte, procurando reinvenção no desenvolvimento web. Estudante WEB Fullstack, com foco nas tecnologias: HTML, CSS, Javascript, Bootstrap, jQuery e Angular, no FrontEnd, e: NodeJs no BackEnd, além de Database com: SQL e No-SQL, além de Gestão, com as Metodologias Ágeis.
                                 <br>Mudando de carreira com foco total, visando um grande futuro como desenvolvedor. 
                                     </p>
                             </section>
